change color scheme, switching to scss

--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
----
-layout: null
-section-type: default
-title: About
-order: 1
----
-## About
+<!-- -&#45;&#45;-->
+<!--layout: null-->
+<!--section-type: default-->
+<!--title: About-->
+<!--order: 1-->
+<!-- -&#45;&#45;-->
+<!--## About-->
 
-Hey! I am **Silvia**, nice to meet you!
+<!--Hey! I am **Silvia**, nice to meet you!-->
