--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,7 @@
 ---
 layout: null
 section-type: contact
-title: Contact
+title: Hello
 order: 3
 
 social:
@@ -12,5 +12,5 @@ social:
   - title: github
     url: http://github.com/simad
 ---
-## Say Hi
+### Hi there!
 
