add animations to timeline

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@ social:
   - title: github
     url: http://github.com/simad
 ---
-
+My name is Silvia; I am fascinated by learning, and I like to (mostly) build cool stuff.
 I am a software engineer at [eBay](http://www.ebay.com).
+
+Just started to write at [simad.github.io/blog](http://simad.github.io/blog).
