Apparently a few years passed since my last update. Ops

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ social:
   - title: github
     url: http://github.com/simad
 ---
-My name is Silvia; I am a learner at heart, and I like to build (mostly) cool stuff.
-I am a software engineer at [eBay](http://www.ebay.com).
+I convert coffee into ~~sometimes~~ useful things.
 
-Planning to start to write soon at [simad.github.io/blog](http://simad.github.io/blog).
+I create software at [Division by Zero](https://divisionbyzero.co); honestly, my boss is the best.
+
+I think photography is awesome. I try to make it look like I know what I am doing at [Chasing Wolves]({{site.url}}/photography).
+
