--- a/literally/index.html
+++ b/literally/index.html
@@ -30,7 +30,7 @@
           `""--..,,_____            _____,,..--""`
                         `"""----"""`
 
-                    Right on it! <img class="parrot" src="/img/coffeeparrot.gif"/>
+               Thanks! Right on it. <img class="parrot" src="/img/coffeeparrot.gif"/>
   </pre>
 
             </div>
