--- a/404.html
+++ b/404.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/_main.css">
-  <script src="/assets/_main.js" defer></script>
-  <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="16x16" />
-  <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="96x96" />
+    <link rel="stylesheet" href="./assets/_main.css">
+  <script src="./assets/_main.js" defer></script>
+  <link rel="icon" type="image/png" href="./assets/pizza-slice.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="./assets/pizza-slice.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="./assets/pizza-slice.png" sizes="96x96" />
   <title>404 - Page not found</title>
 </head>
 
@@ -27,11 +27,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/_main.css">
-  <script src="/assets/_main.js" defer></script>
-  <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="16x16" />
-  <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="96x96" />
+    <link rel="stylesheet" href="./assets/_main.css">
+  <script src="./assets/_main.js" defer></script>
+  <link rel="icon" type="image/png" href="./assets/pizza-slice.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="./assets/pizza-slice.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="./assets/pizza-slice.png" sizes="96x96" />
   <title>404 - Page not found</title>
 </head>
 
