--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/_main.css">
   <script src="/assets/_main.js" defer></script>
-  <link rel="icon" type="image/png" href="/pizza-slice.png" sizes="16x16" />
-  <link rel="icon" type="image/png" href="/pizza-slice.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="/pizza-slice.png" sizes="96x96" />
-  <title>Silvia Mandalà | Software Engineer</title>
+  <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="96x96" />
+  <title>Silvia Mandalà > About</title>
 </head>
 
 <body class="">
@@ -29,7 +29,7 @@
       </h1>
       <p class="text-rad-shade mb-10 text-2xl md:text-3xl mt-10 leading-loose"
       >Independent <strong>Coffee => Code Converter</strong>, currently at
-        <a class="box" href="https://caisgroup.com">CAIS</a></p
+        <a class="box" target="_blank" href="https://caisgroup.com">CAIS</a></p
       >
       <p class="text-shade mb-10 text-2xl md:text-3xl mt-10 leading-loose transform rotate-3"
       >
