--- a/now/index.html
+++ b/now/index.html
@@ -32,7 +32,7 @@
     <article class="article whitespace-pre-wrap">
       <p>I still live in London, yearning to move to the countryside. I still struggle with wanting to be everywhere but here.
 I am about to take a few months break from work; meanwhile, I am building a game (about hacking... nerd) and having a blast.</p>
-<p>AI has not take my job as of now, but I am nevertheless ready for my full-time farmer/pirate (haven't decided yet) era.</p>
+<p>AI has not taken my job yet, but I am nevertheless ready for my full-time farmer/pirate (haven't decided yet) era.</p>
 
     </article>
   </div>
