deploy: 969957e536a8b37e2cd6afa82642cfa87a7f9ef1

--- a/404.html
+++ b/404.html
@@ -47,7 +47,7 @@
     <main>
     <div class="font-sans text-center pt-12 lg:pt-20">
       <h1 class="text-3xl lg:text-4xl 2xl:text-6xl font-bold">Nope</h1>
-      <p class="mt-6 lg:mt-8 2xl:mt-12 text-2xl lg:text-2xl 2xl:text-3xl">I don't exist.</p>
+      <p class="mt-6 lg:mt-8 2xl:mt-12 text-2xl lg:text-2xl 2xl:text-3xl">I don't exist 👻.</p>
     </div>
   </main>
 </body>
