--- a/now/index.html
+++ b/now/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="16x16" />
   <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="96x96" />
-  <title>Silvia Mandalà > Now</title>
+  <title>Silvia Mandalà > NOW</title>
 </head>
 
 <body class="">
@@ -23,16 +23,15 @@
   </div>
     <div class="text-center pt-12 lg:pt-20">
     <div>
-      <h1 class="text-3xl md:text-5xl 2xl:text-6xl font-bold">Now</h1>
-                  <p class="font-sans mt-4 lg:mt-6 2xl:mt-8 text-2xl"><strong>August 20, 2025 14:42</strong></p>
-    </div>
+      <h1 class="text-3xl md:text-4xl 2xl:text-5xl font-extrabold antialiased"><a href="/">⬅</a> NOW</h1>
+                </div>
   </div>
 
   <div class="text-2xl sm:w-5/6 md:w-4/5 xl:w-1/2 2xl:w-5/12 mt-10 mr-auto ml-auto px-6 lg:px-0">
-    <article class="article whitespace-pre-wrap">
-      <p>I still live in London, yearning to move to the countryside. I still struggle with wanting to be everywhere but here.
-I am about to take a few months break from work; meanwhile, I am building a game (about hacking... nerd) and having a blast.</p>
-<p>AI has not taken my job yet, but I am nevertheless ready for my full-time farmer/pirate (haven't decided yet) era.</p>
+    <article class="article whitespace-pre-wrap box-page transform rotate-2 pt-10 px-10">1st Feb 2026
+      <p>I am currently in Italy, about to move to sunny Malta. Well, that was not exactly what I had planned, but such is life sometimes.</p>
+<p>I have started a masters in Applied Neuroscience at King's College, and I am pretty stoked about it.</p>
+<p>AI has not taken my job yet, but I am nevertheless ready for my full-time farmer/pirate/scientist era.</p>
 
     </article>
   </div>
