--- a/index.html
+++ b/index.html
@@ -2,26 +2,29 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/_main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Senior Software Engineer & Trainee Neuroscientist. Mapping the intersection of code, the human brain, and intentional living. ">
+    <meta property="og:title" content="Silvia Mandalà">
+    <meta property="og:description" content="Software Engineer & Trainee Neuroscientist. Mapping the intersection of code, the human brain, and intentional living.">
+      <link rel="stylesheet" href="/assets/_main.css">
   <script src="/assets/_main.js" defer></script>
   <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="16x16" />
   <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="96x96" />
-  <title>Silvia Mandalà > About</title>
+    <title>Silvia Mandalà > About</title>
 </head>
 
 <body class="">
-  <div class="relative" id="dark-mode-toggle">
+<div class="relative" id="dark-mode-toggle">
     <svg id="sun-toggle" xmlns="http://www.w3.org/2000/svg" class="dark-mode-toggle opacity-0" viewBox="0 0 20 20" fill="currentColor">
-      <path fill-rule="evenodd" d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" clip-rule="evenodd" />
+        <path fill-rule="evenodd" d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" clip-rule="evenodd" />
     </svg>
     <svg id="moon-toggle" xmlns="http://www.w3.org/2000/svg" class="dark-mode-toggle opacity-100" viewBox="0 0 20 20" fill="currentColor">
-      <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z" />
+        <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z" />
     </svg>
-  </div>
-    <main>
+</div>
+  <main>
     <div class="container text-center pt-10 p-4 sm:p-8 lg:p-2">
         <div class="flex md:flex-row flex-col justify-center w-full">
       <h1 class="uppercase font-black svg-outline transform">
