--- a/now/index.html
+++ b/now/index.html
@@ -31,7 +31,7 @@
   </div>
 
   <div class="text-2xl sm:w-5/6 md:w-4/5 xl:w-1/2 2xl:w-5/12 mt-10 mr-auto ml-auto px-6 lg:px-0">
-    <article class="article whitespace-pre-wrap box-page transform rotate-2 pt-10 px-10">1st Feb 2026
+    <article class="article whitespace-pre-wrap box-page transform rotate-2 pt-10 px-10"><strong>1st Feb 2026</strong>
       <p>I am currently in Italy, about to move to sunny Malta. Well, that was not exactly what I had planned, but such is life sometimes.</p>
 <p>I have started a masters in Applied Neuroscience at King's College, and I am pretty stoked about it.</p>
 <p>AI has not taken my job yet, but I am nevertheless ready for my full-time farmer/pirate/scientist era.</p>
