deploy: 7082b6235704d2b195b942a201bcee7091e6bf09

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Silvia Mandalà">
     <meta property="og:description" content="Software Engineer & Trainee Neuroscientist. Mapping the intersection of code, the human brain, and intentional living.">
       <link rel="stylesheet" href="/assets/_main.css">
-  <script src="/assets/_main.js"></script>
+  <script src="/assets/_main.js" defer></script>
   <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="16x16" />
   <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="/assets/pizza-slice.png" sizes="96x96" />
