deploy: 4e638e524b56fc1e9ebe30c1bf60b6af8e52dcb1

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
                         >Debugging Humans</a
                         ></li>
                     <li class="inline"
+                    ><a class="hover:underline" rel="me" target="_blank" href="/nook"
+                        >Notes</a
+                        ></li>
+                    <li class="inline"
                     ><a class="hover:underline" rel="me" target="_blank" href="https://www.linkedin.com/in/silviamandala"
                         >LinkedIn</a
                         ></li>
