--- a/now/index.html
+++ b/now/index.html
@@ -36,7 +36,7 @@
 </div>
   <div class="text-center pt-12 lg:pt-20">
     <div>
-      <h1 class="text-3xl md:text-4xl 2xl:text-5xl font-extrabold antialiased"><a href="/">⬅</a> NOW</h1>
+      <h1 class="text-3xl md:text-4xl 2xl:text-5xl font-extrabold antialiased"><a href="/">◀</a> NOW</h1>
                 </div>
   </div>
 
